- 포인트 적립/사용/취소 로직에 비관적 락, 에러 코드, Micrometer 메트릭 추가 - 만료 포인트 자동 정리 스케줄러 및 EXPIRE 이력 타입 구현 - API Key 기반 보안, Clock/Properties 설정, Actuator/환경변수 설정 정비