@@ -6,7 +6,6 @@ import com.musinsa.point.domain.entity.PointUsage;
 import com.musinsa.point.domain.entity.PointUsageDetail;
 import com.musinsa.point.domain.repository.PointEarningRepository;
 import com.musinsa.point.domain.repository.PointHistoryRepository;
-import com.musinsa.point.domain.repository.PointUsageDetailRepository;
 import com.musinsa.point.domain.repository.PointUsageRepository;
 import com.musinsa.point.dto.request.AccumulateCancelRequest;
 import com.musinsa.point.dto.request.AccumulateRequest;
@@ -15,15 +14,22 @@ import com.musinsa.point.dto.request.UseRequest;
 import com.musinsa.point.dto.response.BalanceResponse;
 import com.musinsa.point.dto.response.PointHistoryResponse;
 import com.musinsa.point.dto.response.PointResponse;
+import com.musinsa.point.exception.ErrorCode;
+import com.musinsa.point.exception.PointException;
+import io.micrometer.core.instrument.MeterRegistry;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Clock;
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -31,9 +37,11 @@ public class PointService {
 
     private final PointEarningRepository pointEarningRepository;
     private final PointUsageRepository pointUsageRepository;
-    private final PointUsageDetailRepository pointUsageDetailRepository;
     private final PointHistoryRepository pointHistoryRepository;
     private final PointConfigService pointConfigService;
+    private final PointHistoryWriter pointHistoryWriter;
+    private final MeterRegistry meterRegistry;
+    private final Clock clock;
 
     private static final int DEFAULT_EXPIRATION_DAYS = 365;
     private static final int MIN_EXPIRATION_DAYS = 1;
@@ -41,30 +49,23 @@ public class PointService {
 
     @Transactional
     public PointResponse accumulate(AccumulateRequest request) {
-        // 1회 최대 적립 금액 검증
+        LocalDateTime now = LocalDateTime.now(clock);
+
         Long maxAccumulateAmount = pointConfigService.getMaxAccumulateAmount();
         if (request.getAmount() > maxAccumulateAmount) {
-            throw new IllegalArgumentException(
-                    String.format("1회 최대 적립 가능 포인트는 %d원입니다.", maxAccumulateAmount));
+            throw new PointException(ErrorCode.EXCEED_MAX_ACCUMULATE, maxAccumulateAmount);
         }
 
-        // 개인별 최대 보유 포인트 검증
-        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(request.getUserId());
+        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(request.getUserId(), now);
         Long maxUserBalance = pointConfigService.getMaxUserBalance();
         if (currentBalance + request.getAmount() > maxUserBalance) {
-            throw new IllegalArgumentException(
-                    String.format("개인별 최대 보유 포인트는 %d원입니다.", maxUserBalance));
+            throw new PointException(ErrorCode.EXCEED_MAX_BALANCE, maxUserBalance);
         }
 
-        // 만료일 설정
         int expirationDays = request.getExpirationDays() != null ? request.getExpirationDays() : DEFAULT_EXPIRATION_DAYS;
         if (expirationDays < MIN_EXPIRATION_DAYS || expirationDays >= MAX_EXPIRATION_DAYS) {
-            throw new IllegalArgumentException(
-                    String.format("만료일은 %d일 이상 %d일 미만이어야 합니다.", MIN_EXPIRATION_DAYS, MAX_EXPIRATION_DAYS));
+            throw new PointException(ErrorCode.INVALID_EXPIRATION_DAYS, MIN_EXPIRATION_DAYS, MAX_EXPIRATION_DAYS);
         }
-
-        LocalDateTime now = LocalDateTime.now();
-        LocalDateTime expirationDate = now.plusDays(expirationDays);
 
         String pointKey = generatePointKey();
         PointEarning pointEarning = PointEarning.builder()
@@ -72,17 +73,18 @@ public class PointService {
                 .userId(request.getUserId())
                 .amount(request.getAmount())
                 .remainingAmount(request.getAmount())
-                .expirationDate(expirationDate)
-                .isManual(request.getIsManual() != null ? request.getIsManual() : false)
+                .expirationDate(now.plusDays(expirationDays))
+                .isManual(Boolean.TRUE.equals(request.getIsManual()))
                 .createdAt(now)
                 .build();
 
         pointEarningRepository.save(pointEarning);
-
-        // 이력 저장
         Long newBalance = currentBalance + request.getAmount();
-        saveHistory(request.getUserId(), PointHistory.PointHistoryType.ACCUMULATE, pointKey,
+        pointHistoryWriter.record(request.getUserId(), PointHistory.PointHistoryType.ACCUMULATE, pointKey,
                 null, request.getAmount(), newBalance, now);
+
+        log.info("Point accumulated. userId={} pointKey={} amount={}", request.getUserId(), pointKey, request.getAmount());
+        meterRegistry.counter("point.accumulate.success").increment();
 
         return PointResponse.builder()
                 .pointKey(pointEarning.getPointKey())
@@ -97,46 +99,45 @@ public class PointService {
 
     @Transactional
     public void accumulateCancel(AccumulateCancelRequest request) {
-        PointEarning pointEarning = pointEarningRepository.findByPointKey(request.getPointKey())
-                .orElseThrow(() -> new IllegalArgumentException("포인트를 찾을 수 없습니다."));
+        LocalDateTime now = LocalDateTime.now(clock);
+        PointEarning pointEarning = pointEarningRepository.findWithLockByPointKey(request.getPointKey())
+                .orElseThrow(() -> new PointException(ErrorCode.POINT_NOT_FOUND));
 
-        // 일부 사용된 경우 취소 불가
         if (!pointEarning.getAmount().equals(pointEarning.getRemainingAmount())) {
-            throw new IllegalArgumentException("일부 사용된 포인트는 적립 취소할 수 없습니다.");
+            throw new PointException(ErrorCode.POINT_ALREADY_USED);
         }
 
         Long userId = pointEarning.getUserId();
-        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(userId);
+        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(userId, now);
         Long cancelAmount = pointEarning.getAmount();
 
         pointEarningRepository.delete(pointEarning);
 
-        // 이력 저장
-        Long newBalance = currentBalance - cancelAmount;
-        saveHistory(userId, PointHistory.PointHistoryType.ACCUMULATE_CANCEL, request.getPointKey(),
-                null, cancelAmount, newBalance, LocalDateTime.now());
+        Long newBalance = Math.max(currentBalance - cancelAmount, 0);
+        pointHistoryWriter.record(userId, PointHistory.PointHistoryType.ACCUMULATE_CANCEL, request.getPointKey(),
+                null, cancelAmount, newBalance, now);
+        log.info("Point accumulate cancelled. userId={} pointKey={}", userId, request.getPointKey());
     }
 
     @Transactional
     public PointResponse use(UseRequest request) {
-        List<PointEarning> availablePoints = pointEarningRepository.findAvailablePointsByUserId(request.getUserId());
+        LocalDateTime now = LocalDateTime.now(clock);
+        List<PointEarning> availablePoints =
+                pointEarningRepository.findAvailablePointsByUserIdForUpdate(request.getUserId(), now);
 
         if (availablePoints.isEmpty()) {
-            throw new IllegalArgumentException("사용 가능한 포인트가 없습니다.");
+            throw new PointException(ErrorCode.NO_AVAILABLE_POINTS);
         }
 
-        Long totalAvailable = availablePoints.stream()
+        long totalAvailable = availablePoints.stream()
                 .mapToLong(PointEarning::getRemainingAmount)
                 .sum();
 
         if (totalAvailable < request.getAmount()) {
-            throw new IllegalArgumentException("사용 가능한 포인트가 부족합니다.");
+            throw new PointException(ErrorCode.INSUFFICIENT_POINT);
         }
 
         String pointKey = generatePointKey();
-        LocalDateTime now = LocalDateTime.now();
-
-        // 포인트 사용 엔티티 생성
         PointUsage pointUsage = PointUsage.builder()
                 .pointKey(pointKey)
                 .userId(request.getUserId())
@@ -146,26 +147,25 @@ public class PointService {
                 .createdAt(now)
                 .build();
 
-        // 포인트 사용 상세 처리 및 연관관계 설정
-        Long remainingUseAmount = request.getAmount();
+        long remainingUseAmount = request.getAmount();
         for (PointEarning pointEarning : availablePoints) {
             if (remainingUseAmount <= 0) {
                 break;
             }
-
-            Long useAmount = Math.min(pointEarning.getRemainingAmount(), remainingUseAmount);
+            long useAmount = Math.min(pointEarning.getRemainingAmount(), remainingUseAmount);
             pointEarning.use(useAmount);
-            pointUsage.addUsageDetail(pointEarning, useAmount); // 캡슐화된 메소드 사용
-
+            pointUsage.addUsageDetail(pointEarning, useAmount);
             remainingUseAmount -= useAmount;
         }
-        
-        pointUsageRepository.save(pointUsage); // Cascade 옵션으로 Detail 까지 저장
 
-        // 이력 저장
-        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(request.getUserId());
-        saveHistory(request.getUserId(), PointHistory.PointHistoryType.USE, pointKey,
+        pointUsageRepository.save(pointUsage);
+
+        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(request.getUserId(), now);
+        pointHistoryWriter.record(request.getUserId(), PointHistory.PointHistoryType.USE, pointKey,
                 request.getOrderNumber(), request.getAmount(), currentBalance, now);
+        log.info("Point used. userId={} pointKey={} orderNumber={} amount={}",
+                request.getUserId(), pointKey, request.getOrderNumber(), request.getAmount());
+        meterRegistry.counter("point.use.success").increment();
 
         return PointResponse.builder()
                 .pointKey(pointKey)
@@ -180,22 +180,26 @@ public class PointService {
 
     @Transactional
     public void useCancel(UseCancelRequest request) {
-        PointUsage pointUsage = pointUsageRepository.findByPointKey(request.getPointKey())
-                .orElseThrow(() -> new IllegalArgumentException("포인트 사용 내역을 찾을 수 없습니다."));
+        LocalDateTime now = LocalDateTime.now(clock);
+        PointUsage pointUsage = pointUsageRepository.findWithLockByPointKey(request.getPointKey())
+                .orElseThrow(() -> new PointException(ErrorCode.POINT_USAGE_NOT_FOUND));
 
         Long cancelAmount = request.getAmount() != null ? request.getAmount() : pointUsage.getCancellableAmount();
-
-        if (pointUsage.getCancellableAmount() < cancelAmount) {
-            throw new IllegalArgumentException("취소 가능한 포인트가 부족합니다.");
+        if (cancelAmount == null || cancelAmount < 1) {
+            throw new PointException(ErrorCode.INVALID_CANCEL_AMOUNT);
         }
 
-        Long remainingCancelAmount = cancelAmount;
-        LocalDateTime now = LocalDateTime.now();
+        if (pointUsage.getCancellableAmount() < cancelAmount) {
+            throw new PointException(ErrorCode.CANCEL_AMOUNT_EXCEEDS);
+        }
 
-        // LIFO 순서로 취소하기 위해 상세 내역을 역순으로 정렬
         List<PointUsageDetail> details = pointUsage.getUsageDetails().stream()
-            .sorted((d1, d2) -> d2.getId().compareTo(d1.getId()))
-            .toList();
+                .sorted(Comparator.comparing(PointUsageDetail::getId).reversed())
+                .collect(Collectors.toList());
+
+        long remainingCancelAmount = cancelAmount;
+        Long balanceBefore = pointEarningRepository.getTotalRemainingAmountByUserId(pointUsage.getUserId(), now);
+        long runningBalance = balanceBefore;
 
         for (PointUsageDetail detail : details) {
             if (remainingCancelAmount <= 0) {
@@ -203,10 +207,9 @@ public class PointService {
             }
 
             PointEarning pointEarning = detail.getPointEarning();
-            Long cancelFromPoint = Math.min(detail.getAmount(), remainingCancelAmount);
+            long cancelFromPoint = Math.min(detail.getAmount(), remainingCancelAmount);
 
-            if (pointEarning.isExpired()) {
-                // 만료된 포인트는 신규 적립 처리
+            if (pointEarning.isExpired(now)) {
                 String newPointKey = generatePointKey();
                 PointEarning newPointEarning = PointEarning.builder()
                         .pointKey(newPointKey)
@@ -219,13 +222,12 @@ public class PointService {
                         .build();
                 pointEarningRepository.save(newPointEarning);
 
-                // 신규 적립 이력 저장
-                Long currentBalanceAfterReEarning = pointEarningRepository.getTotalRemainingAmountByUserId(pointEarning.getUserId());
-                saveHistory(pointEarning.getUserId(), PointHistory.PointHistoryType.ACCUMULATE, newPointKey,
-                        "사용취소로 인한 재적립", cancelFromPoint, currentBalanceAfterReEarning, now);
+                runningBalance += cancelFromPoint;
+                pointHistoryWriter.record(pointEarning.getUserId(), PointHistory.PointHistoryType.ACCUMULATE, newPointKey,
+                        "사용취소로 인한 재적립", cancelFromPoint, runningBalance, now);
             } else {
-                // 만료되지 않은 포인트는 원래 적립으로 복구
                 pointEarning.cancelUsage(cancelFromPoint);
+                runningBalance += cancelFromPoint;
             }
 
             remainingCancelAmount -= cancelFromPoint;
@@ -233,14 +235,16 @@ public class PointService {
 
         pointUsage.cancel(cancelAmount);
 
-        // 이력 저장
-        Long currentBalance = pointEarningRepository.getTotalRemainingAmountByUserId(pointUsage.getUserId());
-        saveHistory(pointUsage.getUserId(), PointHistory.PointHistoryType.USE_CANCEL, request.getPointKey(),
-                pointUsage.getOrderNumber(), cancelAmount, currentBalance, now);
+        pointHistoryWriter.record(pointUsage.getUserId(), PointHistory.PointHistoryType.USE_CANCEL, request.getPointKey(),
+                pointUsage.getOrderNumber(), cancelAmount, runningBalance, now);
+        log.info("Point usage cancelled. userId={} pointKey={} cancelAmount={}",
+                pointUsage.getUserId(), request.getPointKey(), cancelAmount);
+        meterRegistry.counter("point.use-cancel.success").increment();
     }
 
     public BalanceResponse getBalance(Long userId) {
-        Long totalBalance = pointEarningRepository.getTotalRemainingAmountByUserId(userId);
+        LocalDateTime now = LocalDateTime.now(clock);
+        Long totalBalance = pointEarningRepository.getTotalRemainingAmountByUserId(userId, now);
         return BalanceResponse.builder()
                 .userId(userId)
                 .totalBalance(totalBalance)
@@ -264,19 +268,5 @@ public class PointService {
 
     private String generatePointKey() {
         return UUID.randomUUID().toString().replace("-", "").substring(0, 20).toUpperCase();
-    }
-
-    private void saveHistory(Long userId, PointHistory.PointHistoryType type, String pointKey,
-                             String orderNumber, Long amount, Long balance, LocalDateTime createdAt) {
-        PointHistory history = PointHistory.builder()
-                .userId(userId)
-                .type(type)
-                .pointKey(pointKey)
-                .orderNumber(orderNumber)
-                .amount(amount)
-                .balance(balance)
-                .createdAt(createdAt)
-                .build();
-        pointHistoryRepository.save(history);
     }
 }
